Update lowercase/uppercase correspondance to match pipe usage

--- a/src/app/component-b/component-b.component.html
+++ b/src/app/component-b/component-b.component.html
@@ -14,13 +14,13 @@
 </div>
 
 <div class="card">
-    <h3>Lowercase:</h3>
+    <h3>Uppercase:</h3>
     <p>{{myLowercase | uppercase}}</p>
 </div>
 
 <div class="card">
-    <h3>Uppercase:</h3>
-    <p>{{myUppercase | lowercase}}</p>
+    <h3>Lowercase:</h3>
+    <p>{{myLowercase | lowercase}}</p>
 </div>
 
 <div class="card">
